<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">android_12306</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <!-- login页面  -->
    <string name="login_network_title">网络设置提示</string>
    <string name="login_network_msg">没有可用的网络，是否设置网络</string>
    <string name="ok">是</string>
    <string name="no">否</string>
	<string name="login_user">用户名：</string>
	<string name="login_user_hint">请输入12306注册账号</string>
	<string name="login_passwd">密码：</string>
	<string name="login_passwd_hint">请输入12306注册密码</string>
	<string name="login_check">注册码：</string>
	<string name="login_check_hint">请输入右侧的注册码</string>
	<string name="login_btn">登录</string>
	<string name="login_sign">新注册</string>
	<string name="login_auto">允许自动登录</string>
	<string name="login_text_1">友情提示：</string>
	<string name="login_text_2">●设置自动登录系统将记录您的账号信息；</string>
	<string name="login_text_3">●自动登录将有助于您在站点繁忙的时候更有计划订到车票</string>
	<string name="login_check_error">验证码错误</string>
	<string name="login_name_error">用户名或密码错误</string>
	<string name="login_ing">正在登录。。。</string>
	<string name="login_wait">请再按一次</string>
	<!-- home页面  -->
	<string name="logout">登出</string>
	<string name="home_head">我的订票助手</string>
	<string name="home_1">我的资料</string>
	<string name="home_2">同行旅客管理</string>
	<string name="home_3">车票查询</string>
	<string name="home_4">我的订单</string>
	<string name="home_5">余票通知</string>
	<string name="home_6">订单通知</string>
	<string name="home_7">反馈建议</string>
	<string name="home_8">软件评分</string>
	<string name="home_9">软件升级</string>
	<string name="home_10">关于我们</string>
	<!-- query页面  -->
	<string name="back">返回</string>
	<string name="query">查询</string>
	<string name="query_start">出发地：</string>
	<string name="query_end">目的地：</string>
	<string name="query_date">出发日期</string>
	<string name="query_time">出发时间</string>
	<string name="query_kind">列车类型</string>
	<string name="query_class">席别</string>
	<string name="d_seat">全部</string>
	<string name="query_hint">每次购买单张车票成功的概率更高，购票不晚于开车前两小时，提前12天可以购票，每个车站第一天的开售时间不一样，如需抢票，请提前测试</string>

	<string-array name="query_time_array">
　　        <item>00:00--24:00</item>
　　        <item>00:00--06:00</item>
　　        <item>06:00--12:00</item>
　　        <item>12:00--18:00</item>
　　        <item>18:00--24:00</item>
　　    </string-array>
	<string-array name="query_kind_array">
　　        <item>全部</item>
　　        <item>动车</item>
　　        <item>Z字头</item>
　　        <item>T字头</item>
　　        <item>K字头</item>
	 <item>其他</item>
　　    </string-array>
	<string-array name="query_kind_array_l">
　　        <item>QB</item>
　　        <item>D</item>
　　        <item>Z</item>
　　        <item>T</item>
　　        <item>K</item>
	 <item>QT</item>
　　    </string-array>
	<string-array name="query_class_array">
	 <item>全部</item>
　　        <item>商务座</item>
　　        <item>一等座</item>
　　        <item>二等座</item>
	 <item>其他</item>
　　    </string-array>
	<string name ="d_start">北京</string>
	<string name = "d_end">武汉</string>
	<string name="comfirm">确定</string>
	<!-- query result页面  -->
	<string name="query_result_title">车票查询</string>
	<string name="no_ticket_hint">已经无法预订</string>
	<!-- book页面  -->
	<string name="book_title">订单</string>
	<string name="cancel">取消</string>
	<string name="book">提交订单</string>
	<string name="book_train">车次</string>
	<string name="book_date">日期</string>
	<string name="book_time">时间</string>
	<string name="book_class">席别</string>
	<string name="book_check">验证码</string>
	<string name="book_passager">乘客信息</string>
	<string name="book_add_passager">添加乘客</string>
	<string name="book_hint_1">●购买单张车票成功率更高</string>
	<string name="book_hint_2">●请在提交前仔细核对信息，如果一天内取消订单三次则不能再订票</string>
		<!-- 注册页面 -->
	<string name="register">注册</string>
	<string name="reg_student">学生注册</string>
	<string name="reg_student_warming">暂不支持学生用户注册，点击</string>
	<string name="reg_basic_info">基本信息</string>
	<string name="reg_username">用\t户  名：</string>
	<string name="reg_username_hint">6-30位(字母,数字均可)</string>
	<string name="reg_password">密\t\t  码：</string>
	<string name="reg_password_hint">至少6位(字母,数字均可)</string>
	<string name="reg_password_verify">确认密码：</string>
	<string name="reg_password_verify_hint">请再次输入密码</string>
	<string name="reg_qurey_passwrod">查询密码：</string>
	<string name="reg_qurey_passwrod_hint">6位语音数字查询密码：</string>
	<string name="reg_qurey_passwrod_verify_hint">请再次输入查询密码</string>
	<string name="reg_checkcode">验\t证  码：</string>
	<string name="reg_checkcode_hint">点击可刷新验证码</string>

	<string name="reg_contact_way">联系方式</string>
	<string name="reg_moblie">手机号码：</string>
	<string name="reg_moblie_hint">接受订票信息</string>
	<string name="reg_email">电子邮件：</string>
	<string name="reg_email_hint">激活账号，接收订单信息</string>

	<string name="reg_person_info">个人信息</string>
	<string name="reg_name">姓\t\t名：</string>
	<string name="reg_name_hint">请输入真实姓名</string>
	<string name="reg_sex">性\t\t别：</string>
	<string name="reg_sex_male">男</string>
	<string name="reg_sex_female">女</string>
	<string name="reg_dingested_birth">出身日期：</string>
	<string name="reg_certificate_type">证件类型：</string>
	<string name="reg_cerfificate_num">证件号码：</string>
	<string name="reg_passenger_type">旅客类型：</string>
	<string name="reg_help_info">*如有身份信息重复，请去12306网站查看帮助第16条</string>
</resources>