<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="53dp"
        android:background="@drawable/banner"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/home_head"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/query"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/query" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageButton
            android:id="@+id/query_change"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_centerVertical="true"
            android:src="@drawable/query_change" />

        <LinearLayout
            android:id="@+id/query_start_l"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/query_change"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/query_start" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/query_start"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_start"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/d_start"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/query_end_l"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_below="@id/query_start_l"
            android:layout_marginRight="15dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@id/query_change"
            android:background="@drawable/white_frame"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/query_end" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/query_end"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_end"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/d_end"
                android:textSize="16sp"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:src="@drawable/line_black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_frame"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/query_date"
                android:id="@+id/query_date_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/query_date_1"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/trig" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/query_time"
                android:id="@+id/query_time_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@id/query_time_1"
                android:layout_weight="1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/trig" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/white_frame"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/query_kind"
                android:id="@+id/query_kind_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_kind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="48dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_toRightOf="@id/query_kind_1"
                android:text="@string/d_seat"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/trig" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/query_class"
                android:id="@+id/query_class_1"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/query_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/d_seat"
                android:layout_toRightOf="@id/query_class_1"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/trig" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"

        android:layout_marginTop="15dp"
        android:text="@string/query_hint" />

</LinearLayout>